NNUE (#45)
Implement NNUE arch (768->256)x2->1 trained on 250 million positions from Leela re-scored with Calvins own search + HCE